fixed the visibility bug on the dropdown script through the Sass. I could have used the .ready on the js but I went for a Sass change instead.

--- a/td_bank/stylesheets/style.scss
+++ b/td_bank/stylesheets/style.scss
@@ -109,9 +109,11 @@ $label: 1.25em;
 }
 
 nav {
+	height: 0;
 
 	ul {
 		@include segment;
+		opacity: 0;
 
 		li:nth-of-type(1) {
 			border-top: 2px solid $green1;
